# weave-gitops-scenarios

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
docs/: why-edit-etc-hosts.md
k8s/apps/: kustomization.yaml
k8s/apps/weave-gitops-app/: kustomization.yaml  oidc-secret.yaml  release.yaml
k8s/cluster/: apps.yaml  infrastructure.yaml
k8s/cluster/flux-system/: gotk-sync.yaml
k8s/infrastructure/sources/: dex.yaml  kustomization.yaml  scenarios.yaml  weave-gitops.yaml
kind/: cluster-with-registry-config.yaml
scenario-generators/: Dockerfile
scenario-generators/dex/: generate.py
scenario-generators/dex/templates/: release.yaml
scenario-generators/lib/: generate.py  make_resource.py
scenario-generators/many-namespaces/: generate.py
scenario-generators/many_namespaces/: generate.py
scenario-generators/many_podinfo_kustomizations/: generate.py
scenarios/dex/: kustomization.yaml  namespace.yaml  oidc-secret.yaml  release.yaml
scenarios/many-namespaces/: kustomization.yaml  many-namespaces.yaml
scenarios/many-podinfo-kustomizations/: kustomization.yaml  namespace.yaml
scenarios/many-podinfo-kustomizations/kustomizations/: kustomization-0.yaml  kustomization-1.yaml  kustomization-2.yaml  kustomization-3.yaml  kustomization-4.yaml  kustomization-5.yaml
scenarios/many-podinfo-kustomizations/podinfo-kustomization-0/: release.yaml
scenarios/many-podinfo-kustomizations/podinfo-kustomization-1/: release.yaml
scenarios/many-podinfo-kustomizations/podinfo-kustomization-2/: release.yaml
(+3 files in other folders)
